# advanced_python

./: README.md  hw_1  hw_3_first.py  pyproject.toml
hw_3/: dummy  hw_3_second.py
hw_3/artifacts/: matrix_add.txt  matrix_add_2.txt  matrix_math_multiply.txt  matrix_math_multiply_2.txt  matrix_multiply.txt  matrix_multiply_2.txt
hw_4/: hw_4_first.py  hw_4_second.py  hw_4_third.py
hw_4/artifacts/: fibonacci.txt  integrate.txt  log.txt
hw_5/: task5_1.py  task5_2.py  task5_3.py
hw_5/artifacts/: notifications.json  offers.json  offers_2025-04-11.json  subscriptions.json
