[tool.poetry]
name = "realty-notifier-bot"
version = "0.1.0"
description = "all homeworks"
authors = ["Zakharov Zakhar"]
readme = "README.md"
license = "MIT"
homepage = ""
repository = ""
documentation = ""
keywords = ["telegram", "bot", "realty", "scraping", "notifications"]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^3.0.0"
aiohttp = "^3.8.0"
beautifulsoup4 = "^4.11.0"
python-dotenv = "^1.0.0"
lxml = "^4.9.0"
numpy = "^1.21.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.20.0"
mypy = "^0.910"
flake8 = "^4.0.0"
black = "^22.0.0"
isort = "^5.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
python_files = "test_*.py"
addopts = "--cov=src --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/

'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
